update UI design

--- a/web/index.html
+++ b/web/index.html
@@ -16,7 +16,23 @@
     
             <!-- 搜索框和按钮 -->
             <div id="search-controls">
-                <h1>My Search Engine</h1>
+                <h1 id="logo">
+                    <span class="star">🌟</span>
+                    <span class="letter" style="color: #4285F4;">S</span>
+                    <span class="letter" style="color: #EA4335;">i</span>
+                    <span class="letter" style="color: #FBBC05;">m</span>
+                    <span class="letter" style="color: #34A853;">p</span>
+                    <span class="letter" style="color: #EA4335;">l</span>
+                    <span class="letter" style="color: #FBBC05;">e</span>
+                    <span class="letter" style="color: #EA4335;">&nbsp;</span>
+                    <span class="letter" style="color: #4285F4;">S</span>
+                    <span class="letter" style="color: #34A853;">e</span>
+                    <span class="letter" style="color: #EA4335;">a</span>
+                    <span class="letter" style="color: #FBBC05;">r</span>
+                    <span class="letter" style="color: #4285F4;">c</span>
+                    <span class="letter" style="color: #34A853;">h</span>
+                    <span class="star">🌟</span>
+                </h1>
                 <input id="searchbox" type="text" placeholder="Search here..." />
                 <button id="searchbutton">Search</button>  
                 <div id="index-selection">
